# SpaceShit

./: CMakeLists.txt  LICENSE  main.cpp
module/Creepy/: Dump.hpp
module/Creepy/Core/: Base.cppm  Logger.cppm  ResourceDescription.cppm  Type.cppm  Vector.cppm
module/Creepy/Game/: Game.cppm
module/Creepy/Graphics/: Buffer.cppm  DeviceContext.cppm  GraphicsDevice.cppm  GraphicsEngine.cppm  GraphicsPipelineState.cppm  RenderSystem.cppm  ShaderBinary.cppm  SwapChain.cppm
module/Creepy/Window/: Window.cppm
src/Creepy/Core/: Base.cpp
src/Creepy/Game/: Game.cpp  Win64Game.cpp
src/Creepy/Graphics/: Buffer.cpp  DeviceContext.cpp  GraphicsDevice.cpp  GraphicsEngine.cpp  GraphicsPipelineState.cpp  RenderSystem.cpp  ShaderBinary.cpp  SwapChain.cpp
src/Creepy/Window/Win64/: Window.cpp
